Fixed issue with not being able to scroll on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,9 @@ html {
 
 body {
   padding: 2rem;
-  overflow: hidden;
+  overflow-y: auto;
   min-height: 100%;
+  overflow-x: hidden;
   text-align: center;
   background: linear-gradient(150deg, hsl(0, 0%, 100%) 0%, hsl(210, 90%, 60%) 100%);
   display: flex;
